fixed source code redirect

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     </nav>
         <div class="page-container">
             <p>A simple implementation of the freesound API to learn basic front end.</p>
-            <div id="sourcecode"><a href="\about.html">Source Code</a></div>
+            <div id="sourcecode"><a href="https://github.com/aaronthechen/sound-date">Source Code</a></div>
         </div>
 </body>
 </html>
