--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a id="home" href="\">Home</a>
+        <a id="home" href="index.html">Home</a>
         <a id="about" href="about.html">About</a>
     </nav>
         <div class="page-container">
