--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <a id="home" href="\">Home</a>
+        <a id="home" href="index.html">Home</a>
         <a id="about" href="about.html">About</a>
     </nav>
     <div class="page-container" id="input">
