another title change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a id="about" href="about.html">About</a>
     </nav>
     <div class="page-container" id="input">
-        <h1>What Did Your Birthday Sound Like?</h1>
+        <h1>What Does Your Birthday Sound Like?</h1>
         <div id="select-container">
             <div class="select">
                 <label for="touch-month">Select Month</label>
