added loading screen, as well as a potentially new section for sounds

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         </div>
         <button id="submit">SUBMIT</button>
     </div>
-    <div class="page-container" id="result">
+    <div class="page-container" id="loading">
+        <img src="loading.gif" alt="loading">
+    </div>
+    <div class="page-container" id="result">  
       <div class="audio-player">
         <div class="player-body">
           <div id="waveform" class="waveform"></div>
